fixed intro section bg on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -701,9 +701,9 @@ screen and (max-width: 1100px) and (max-height: 700px) {
   }
 
   #intro {
-    background-image: url('../assets/letter-bg.jpg');
-    background-size: cover;
-    /* background: #f9fafb; */
+    /* background-image: url('../assets/letter-bg.jpg');
+    background-size: cover; */
+    background: #f9fafb;
   }
 
   .letter {
